# shrink

./: Cargo.toml  readme.md
crates/shrink/: Cargo.toml
crates/shrink/src/: arrays_and_slices.rs  bool.rs  date_time.rs  float.rs  int.rs  lib.rs  naive_date.rs  option.rs  string.rs  tuple.rs
crates/shrink_macros/: Cargo.toml
crates/shrink_macros/src/: lib.rs
crates/shrink_macros/tests/: basic.rs  big_struct.rs  enum_test.rs  vec.rs
